# pos-cashier

./: CMakeLists.txt  README.md
src/: main.cpp
src/database/: databasemanager.cpp  databasemanager.h
src/firebase/: firebasemanager.cpp  firebasemanager.h
src/models/: cartitem.cpp  cartitem.h  category.cpp  category.h  product.cpp  product.h  sale.cpp  sale.h  user.cpp  user.h
src/printing/: gdiprinter.cpp  gdiprinter.h  receiptformatter.cpp  receiptformatter.h  thermalprinter.cpp  thermalprinter.h
src/utils/: config.cpp  config.h
src/views/: activationwidget.cpp  activationwidget.h  categorieswidget.cpp  categorieswidget.h  loginwidget.cpp  loginwidget.h  mainwindow.cpp  mainwindow.h  poswidget.cpp  poswidget.h  productswidget.cpp  productswidget.h  reportswidget.cpp  reportswidget.h  saleshistorywidget.cpp  saleshistorywidget.h  settingswidget.cpp  settingswidget.h  userswidget.cpp  userswidget.h
